[tool.poetry]
packages = [
  { include = "brain_games" },
]
name = "python-project-49"
version = "0.1.0"
description = ""
authors = ["remeenemee <dk3880930@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
