[tool.poetry]
packages = [
  { include = "brain_games" },
]
name = "hexlet-code"
version = "0.1.0"
description = "Brain-games it`s a game consisting of 5 mini-games related to math"
authors = ["remeenemee <dk3880930@gmail.com>"]
readme = "README.md"
repository = "https://github.com/remeenemee/python-project-49"

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^6.1.0"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:brain_even"
brain-calc = "brain_games.scripts.brain_calc:brain_calc"
brain-gcd = "brain_games.scripts.brain_gcd:brain_gcd"
brain-progression = "brain_games.scripts.brain_progression:brain_progression"
brain-prime = "brain_games.scripts.brain_prime:brain_prime"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
